--- a/index.html
+++ b/index.html
@@ -2,125 +2,129 @@
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard תיק השקעות</title>
+    <title>מערכת ניתוח תיק השקעות אישית</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Assistant', sans-serif; background-color: #f4f7f9; margin: 0; padding: 20px; color: #333; }
-        .container { max-width: 1000px; margin: auto; }
-        header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px; }
-        .stat-card { background: white; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .stat-card h3 { margin: 0; font-size: 0.9em; color: #777; }
-        .stat-card p { margin: 10px 0 0; font-size: 1.5em; font-weight: bold; color: #2c3e50; }
-        .chart-container { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); margin-bottom: 30px; }
-        table { width: 100%; border-collapse: collapse; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        th, td { padding: 15px; text-align: right; border-bottom: 1px solid #eee; }
-        th { background-color: #f8f9fa; color: #555; }
-        .positive { color: #27ae60; }
-        .negative { color: #e74c3c; }
-        #lastUpdate { font-size: 0.8em; color: #888; }
+        :root { --bg: #0f172a; --card: #1e293b; --text: #f8fafc; --accent: #3b82f6; }
+        body { font-family: system-ui, -apple-system, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 20px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-bottom: 20px; }
+        .card { background: var(--card); padding: 20px; border-radius: 12px; border: 1px solid #334155; }
+        .val { font-size: 1.8rem; font-weight: bold; margin-top: 10px; }
+        .label { color: #94a3b8; font-size: 0.9rem; }
+        .chart-container { background: var(--card); padding: 20px; border-radius: 12px; margin-bottom: 20px; }
+        table { width: 100%; border-collapse: collapse; background: var(--card); border-radius: 12px; overflow: hidden; }
+        th, td { padding: 12px; text-align: right; border-bottom: 1px solid #334155; }
+        th { background: #334155; }
+        .pos { color: #10b981; } .neg { color: #f43f5e; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <header>
-        <div>
-            <h1>Dashboard ביצועי תיק</h1>
-            <div id="lastUpdate">טוען נתונים...</div>
-        </div>
-        <div id="usdRate" style="font-weight: bold; color: #2980b9;"></div>
-    </header>
+    <h2 id="mainTitle">טוען נתונים מה-Data Hub...</h2>
 
-    <div class="stats-grid">
-        <div class="stat-card">
-            <h3>שווי תיק (₪)</h3>
-            <p id="totalValue">₪0</p>
+    <div class="grid">
+        <div class="card">
+            <div class="label">שווי תיק נוכחי (USD)</div>
+            <div id="totalVal" class="val">$0</div>
         </div>
-        <div class="stat-card">
-            <h3>תשואה כוללת</h3>
-            <p id="totalReturn">0%</p>
+        <div class="card">
+            <div class="label">תשואה מצטברת</div>
+            <div id="totalRet" class="val">0%</div>
         </div>
-        <div class="stat-card">
-            <h3>מניה מובילה</h3>
-            <p id="topStock">-</p>
+        <div class="card">
+            <div class="label">Max Drawdown</div>
+            <div id="maxDD" class="val neg">0%</div>
+        </div>
+        <div class="card">
+            <div class="label">המניה המנצחת</div>
+            <div id="bestStock" class="val pos">-</div>
         </div>
     </div>
 
     <div class="chart-container">
-        <canvas id="performanceChart"></canvas>
+        <canvas id="mainChart" height="100"></canvas>
     </div>
 
-    <table id="holdingsTable">
+    <table>
         <thead>
             <tr>
-                <th>סימול</th>
+                <th>נכס</th>
                 <th>כמות</th>
-                <th>מחיר (USD)</th>
+                <th>מחיר</th>
+                <th>שווי פוזיציה</th>
                 <th>משקל</th>
             </tr>
         </thead>
-        <tbody>
-            </tbody>
+        <tbody id="tableBody"></tbody>
     </table>
-</div>
 
 <script>
-    async function loadDashboard() {
+    async function fetchData() {
         try {
-            const historyRes = await fetch('data_hub/stock_history.json');
-            const history = await historyRes.json();
-            const portfolioRes = await fetch('data_hub/portfolio.json');
-            const holdings = await portfolioRes.json();
+            // משיכת הנתונים מהקבצים שלך בלבד
+            const [history, portfolio] = await Promise.all([
+                fetch('data_hub/stock_history.json').then(r => r.json()),
+                fetch('data_hub/portfolio.json').then(r => r.json())
+            ]);
 
-            const lastEntry = history[history.length - 1];
-            const firstEntry = history[0];
-            
-            // עדכון זמן עדכון אחרון
-            document.getElementById('lastUpdate').innerText = `עדכון אחרון: ${lastEntry.timestamp}`;
+            const tickers = Object.keys(portfolio);
+            const last = history[history.length - 1];
+            const first = history[0];
 
-            // חישוב שווי
-            let totalUSD = 0;
-            let initialUSD = 0;
-            const tickers = Object.keys(holdings);
-            
-            tickers.forEach(t => {
-                totalUSD += lastEntry.prices[t] * holdings[t];
-                initialUSD += firstEntry.prices[t] * holdings[t];
+            // פונקציית עזר לחישוב שווי תיק בנקודת זמן
+            const calcValue = (data) => tickers.reduce((sum, t) => sum + (data.prices[t] * portfolio[t] || 0), 0);
+
+            // 1. שווי ותשואה
+            const currentVal = calcValue(last);
+            const initialVal = calcValue(first);
+            const totalReturn = ((currentVal / initialVal) - 1) * 100;
+
+            document.getElementById('mainTitle').innerText = `ניתוח תיק - ${last.timestamp}`;
+            document.getElementById('totalVal').innerText = `$${currentVal.toLocaleString()}`;
+            document.getElementById('totalRet').innerText = `${totalReturn.toFixed(2)}%`;
+            document.getElementById('totalRet').classList.add(totalReturn >= 0 ? 'pos' : 'neg');
+
+            // 2. חישוב Max Drawdown (זהה לניתוח ב-README)
+            let peak = 0;
+            let mdd = 0;
+            history.forEach(h => {
+                const v = calcValue(h);
+                if (v > peak) peak = v;
+                const dd = (v / peak) - 1;
+                if (dd < mdd) mdd = dd;
             });
+            document.getElementById('maxDD').innerText = `${(mdd * 100).toFixed(2)}%`;
 
-            const returnPct = ((totalUSD / initialUSD) - 1) * 100;
-            document.getElementById('totalValue').innerText = `₪${(totalUSD * 3.65).toLocaleString()}`; // שער דולר משוער לצורך תצוגה
-            document.getElementById('totalReturn').innerText = `${returnPct.toFixed(2)}%`;
-            document.getElementById('totalReturn').className = returnPct >= 0 ? 'positive' : 'negative';
-
-            // טבלת אחזקות
-            const tbody = document.querySelector('#holdingsTable tbody');
+            // 3. מציאת המניה הטובה ביותר
+            let bestStock = '';
+            let bestPerf = -Infinity;
             tickers.forEach(t => {
-                const row = `<tr>
-                    <td>${t}</td>
-                    <td>${holdings[t]}</td>
-                    <td>$${lastEntry.prices[t]}</td>
-                    <td>${((lastEntry.prices[t]*holdings[t]/totalUSD)*100).toFixed(1)}%</td>
-                </tr>`;
-                tbody.innerHTML += row;
+                const p = ((last.prices[t] / first.prices[t]) - 1) * 100;
+                if (p > bestPerf) { bestPerf = p; bestStock = t; }
             });
+            document.getElementById('bestStock').innerText = `${bestStock} (+${bestPerf.toFixed(1)}%)`;
 
-            // גרף ביצועים
-            const ctx = document.getElementById('performanceChart').getContext('2d');
-            new Chart(ctx, {
+            // 4. בניית הטבלה
+            document.getElementById('tableBody').innerHTML = tickers.map(t => `
+                <tr>
+                    <td><b>${t}</b></td>
+                    <td>${portfolio[t]}</td>
+                    <td>$${last.prices[t]}</td>
+                    <td>$${(last.prices[t] * portfolio[t]).toLocaleString()}</td>
+                    <td>${((last.prices[t] * portfolio[t] / currentVal) * 100).toFixed(1)}%</td>
+                </tr>
+            `).join('');
+
+            // 5. גרף ביצועים מנורמל (100)
+            new Chart(document.getElementById('mainChart'), {
                 type: 'line',
                 data: {
                     labels: history.map(h => h.timestamp.split(' ')[0]),
                     datasets: [{
-                        label: 'שווי תיק ב-$',
-                        data: history.map(h => {
-                            return tickers.reduce((sum, t) => sum + (h.prices[t] * holdings[t]), 0);
-                        }),
-                        borderColor: '#3498db',
-                        backgroundColor: 'rgba(52, 152, 219, 0.1)',
+                        label: 'ביצועי התיק (%)',
+                        data: history.map(h => (calcValue(h) / initialVal * 100).toFixed(2)),
+                        borderColor: '#3b82f6',
+                        backgroundColor: 'rgba(59, 130, 246, 0.1)',
                         fill: true,
                         tension: 0.3
                     }]
@@ -128,18 +132,15 @@
                 options: {
                     responsive: true,
                     plugins: { legend: { display: false } },
-                    scales: { y: { beginAtZero: false } }
+                    scales: { y: { grid: { color: '#334155' }, ticks: { color: '#94a3b8' } } }
                 }
             });
 
-        } catch (e) {
-            console.error("Error loading data:", e);
-            document.getElementById('lastUpdate').innerText = "שגיאה בטעינת נתונים";
+        } catch (err) {
+            document.getElementById('mainTitle').innerText = "שגיאה בטעינת הנתונים מה-Data Hub";
         }
     }
-
-    loadDashboard();
+    fetchData();
 </script>
-
 </body>
 </html>
